# airflight

./: .gitignore  .travis.yml  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-app.yml  python-ci.yml
airflight/: app.py  auxiliary_func.py  data_analysis.py  errors.py  parser_xml.py
airflight/templates/: error400.html  error404.html
airflights/: __init__.py  app.py  data_analysis.py  parser_xml.py
airflights/static/: style.css
airflights/templates/: index.html
choose_flight/: get_flights.py  get_xml_tree.py  parser_xml.py
tests/: __init__.py  conftest.py  test_airflight.py  test_choose_flight.py
tests/func_tests/: __init__.py  set_json_schemes.py  test_app.py
tests/unit_tests/: __init__.py  checking_sorting.py  test_functions.py  unit_test.py
