[tool.poetry]
name = "choose_flight"
version = "0.1.0"
description = ""
authors = ["ramilabd <ramsmart@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.6.3"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"
pytest = "^6.2.4"
isort = "^5.9.3"
autopep8 = "^1.5.7"
add-trailing-comma = "^2.1.0"
pytest-cov = "^3.0.0"
coverage = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
